- feat: add HW13

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hws2",
-  "homepage": "https://IvanBichan.github.io/homeworks_by_ignat_new",
+  "homepage": "yarn ",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
